--- a/templates/index.html
+++ b/templates/index.html
@@ -37,21 +37,39 @@
 </head>
 
 <body>
-  <form id="form" method="post" action="/todos/create">
-    <input type="text" id="description" name="description" />
-    <input type="submit" value="Create" />
-  </form>
-  <div id="error" class="hidden">Something went wrong!</div>
-  <ul id="todos">
-    {% for todo in todos %}
-    <li>
-      <input class="check-completed" data-id="{{ todo.id }}" type="checkbox" {% if todo.completed %} checked
-        {% endif %} />
-      {{ todo.description }}
-      <button class="delete-button" data-id="{{ todo.id }}">&cross;</button>
-    </li>
-    {% endfor %}
-  </ul>
+
+  <div class="lists-wrapper">
+    <ul id="lists">
+      {% for list in lists %}
+      <li>
+        <a href="/lists/{{ list.id }}">
+          {{ list.name }}
+        </a>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+
+  <div class="todos-wrapper">
+    <h4>{{ active_list.name }}</h4>
+    <!-- <form id="form" method="post" action="/todos/create"> -->
+    <form id="form">
+      <input type="text" id="description" name="description" />
+      <input type="submit" value="Create" />
+    </form>
+    <div id="error" class="hidden">Something went wrong!</div>
+    <ul id="todos">
+      {% for todo in todos %}
+      <li>
+        <input class="check-completed" data-id="{{ todo.id }}" type="checkbox" {% if todo.completed %} checked
+          {% endif %} />
+        {{ todo.description }}
+        <button class="delete-button" data-id="{{ todo.id }}">&cross;</button>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+
   <script>
     const checkboxes = document.querySelectorAll('.check-completed');
     for (let i = 0; i < checkboxes.length; i++) {
@@ -86,37 +104,38 @@
         method: 'POST',
         body: JSON.stringify({
           'description': desc,
+          'list_id': {{ active_list.id }}
         }),
-        headers: {
-          'Content-Type': 'application/json'
-        }
+    headers: {
+      'Content-Type': 'application/json'
+    }
       })
         .then(response => response.json())
-        .then(jsonResponse => {
-          console.log(jsonResponse);
-          const li = document.createElement('li');
-          const checkbox = document.createElement('input');
-          checkbox.className = 'check-completed';
-          checkbox.type = 'checkbox';
-          checkbox.setAttribute('data-id', jsonResponse.id);
-          li.appendChild(checkbox);
+      .then(jsonResponse => {
+        console.log(jsonResponse);
+        const li = document.createElement('li');
+        const checkbox = document.createElement('input');
+        checkbox.className = 'check-completed';
+        checkbox.type = 'checkbox';
+        checkbox.setAttribute('data-id', jsonResponse.id);
+        li.appendChild(checkbox);
 
-          const text = document.createTextNode(' ' + jsonResponse.description);
-          li.appendChild(text);
+        const text = document.createTextNode(' ' + jsonResponse.description);
+        li.appendChild(text);
 
-          const deleteBtn = document.createElement('button');
-          deleteBtn.className = 'delete-button';
-          deleteBtn.setAttribute('data-id', jsonResponse.id);
-          deleteBtn.innerHML = '&cross;';
-          li.appendChild(deleteBtn);
+        const deleteBtn = document.createElement('button');
+        deleteBtn.className = 'delete-button';
+        deleteBtn.setAttribute('data-id', jsonResponse.id);
+        deleteBtn.innerHTML = '&cross;';
+        li.appendChild(deleteBtn);
 
-          document.getElementById('todos').appendChild(li)
-          document.getElementById('error').className = 'hidden';
-        })
-        .catch(function () {
-          console.error('Error occurred');
-          document.getElementById('error').className = '';
-        })
+        document.getElementById('todos').appendChild(li)
+        document.getElementById('error').className = 'hidden';
+      })
+      .catch(function () {
+        console.error('Error occurred');
+        document.getElementById('error').className = '';
+      })
     }
     const deleteBtns = document.querySelectorAll('.delete-button');
     for (let i = 0; i < deleteBtns.length; i++) {
